--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,12 @@
   <body>
     <header class="header">
       <div style="background-image: url('assets/frontend/img/header-bg.png');" class="container">
-        <div class="header__lang"><a href="#" class="header__lang_cz">cz</a>
-          <div class="header__line"></div><a href="#" class="header__lang_en">EN</a>
+        <div class="header__lang-wrap"><a href="#" class="header__lang">cz</a>
+          <div class="header__line"></div><a href="#" class="header__lang active">EN</a>
         </div>
         <div class="header__wrap">
           <div class="header__logo"><img src="assets/frontend/img/logo.png" alt="logo" width="113px" height="28px"></div>
-          <div class="header__login-wrap"><a href="#" class="header__product">produkt</a>
+          <div class="header__login-wrap"><a href="#" class="header__product-link">produkt</a>
             <button class="header__login">přihlásit</button>
           </div>
         </div>
@@ -36,160 +36,6 @@
         <button type="submit" value="submit" class="header__send">Odeslat</button>
       </div>
     </header>
-    <header class="header product">
-      <div class="header__layer"></div>
-      <div style="background-image: url('assets/frontend/img/header__product.png');" class="container">
-        <div class="header__layer"></div>
-        <div class="header__lang"><a href="#" class="header__lang_cz">cz</a>
-          <div class="header__line"></div><a href="#" class="header__lang_en">EN</a>
-        </div>
-        <div class="header__login-wrap header__login-wrap--product"><a href="#" class="header__product">produkt</a>
-          <button class="header__login">přihlásit</button>
-        </div>
-        <h1 class="header__title">Dokonalé zázemí pro obchodníky</h1>
-        <div class="header__tablet"><img src="assets/frontend/img/tablet.png" alt="tablet" width="100%" height="auto"></div><img src="assets/frontend/img/arrow.png" alt="arrow up" width="27px" height="27px" class="header__slide-up">
-      </div>
-    </header>
-    <section class="overview">
-      <div class="container">
-        <div class="overview__row">
-          <div class="overview__article">
-            <h2 class="overview__title">PŘEHLED 360</h2>
-            <div class="overview__text">
-              Se sofistikovanou 360kou – detailním přehledem
-              klienta, společnosti a obchodu, máte veškeré
-              informace uloženy srozumitelně, kompaktně a
-              vždy po ruce. Vše od úkolu, schůzek či fází
-              obchodu až po přiložené soubory a smlouvy
-              přehledné na jednom místě. Celá karta poté
-              nabízí i možnost chronologického seřazení
-              veškerých aktivit od prvního kontaktu až po
-              poslední telefonát ve formě intuitivní časové osy.
-              To vše v uživatelsky přátelské formě.
-            </div>
-          </div>
-          <div class="overview__pic"><img src="assets/frontend/img/web-design.png" alt="Web Design Temify" width="100%" height="auto"></div>
-        </div>
-        <div class="overview__row">
-          <div class="overview__pic"><img src="assets/frontend/img/my-tasks.png" alt="Moje úkoly" width="100%" height="auto"></div>
-          <div class="overview__article">
-            <h2 class="overview__title align--right">PŘEHLED 360</h2>
-            <div class="overview__text align--right">
-              Naše fronty jsou inteligentní. Přizpůsobíme nebo
-              je doporučíme na míru dle tempa Vaší
-              společnosti, aby ste díky automatizaci získali
-              maximum. Ke každému úkolu lze přiřadit nejen
-              podúkoly, soubory nebo komentáře, ale proste
-              cokoli, je potřeba. Fronta úkolu zároveň respektuje
-              hierarchii zadání – od firemní, pres týmovou, až po
-              tu individuální.
-            </div>
-          </div>
-        </div>
-        <div class="overview__row">
-          <div class="overview__article">
-            <h2 class="overview__title">PRŮVODCE SCHŮZKOU</h2>
-            <div class="overview__text">
-              Se sofistikovanou 360kou – detailním přehledem
-              klienta, společnosti a obchodu, máte veškeré
-              informace uloženy srozumitelně, kompaktně a
-              vždy po ruce. Vše od úkolu, schůzek či fází
-              obchodu až po přiložené soubory a smlouvy
-              přehledné na jednom místě. Celá karta poté
-              nabízí i možnost chronologického seřazení
-              veškerých aktivit od prvního kontaktu až po
-              poslední telefonát ve formě intuitivní časové osy.
-              To vše v uživatelsky přátelské formě.
-            </div>
-          </div>
-          <div class="overview__pic"><img src="assets/frontend/img/meeting-guide.png" alt="Prúvodce schůzkou - Střední Čechy" width="100%" height="auto"></div>
-        </div>
-        <div class="overview__row">
-          <div class="overview__pic"><img src="assets/frontend/img/call.png" alt="call" width="100%" height="auto"></div>
-          <div class="overview__article">
-            <h2 class="overview__title align--right">PŘEHLED 360</h2>
-            <div class="overview__text align--right">
-              Naše fronty jsou inteligentní. Přizpůsobíme nebo
-              je doporučíme na míru dle tempa Vaší
-              společnosti, aby ste díky automatizaci získali
-              maximum. Ke každému úkolu lze přiřadit nejen
-              podúkoly, soubory nebo komentáře, ale proste
-              cokoli, je potřeba. Fronta úkolu zároveň respektuje
-              hierarchii zadání – od firemní, pres týmovou, až po
-              tu individuální.
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="about-us">
-      <div style="background-image: url('assets/frontend/img/about-us-cover.png');" class="container">
-        <h2 class="about-us__title">O nás</h2>
-        <div class="about-us__article">
-          Už od samého počátku vývoje jsme se snažili o to, aby Bizziapp dokázal ovládat kdokoli a zároveň v něm
-          každý našel přesně to, co potřebuje. Na první pohled to vypadá jako paradox – a právě takové výzvy
-          vyhledáváme. Bizziapp funguje tak trochu jako stavebnice. Řeknete si, co chcete postavit a my Vám
-          dodáme ty správné kostičky. A návod? Ten nebude potřeba. Vše je zcela intuitivní a vždy po ruce. Nový
-          kontakt rovnou připojíte ke společnosti. Je třeba kontakt oslovit? Jedním kliknutím jste v úkolech,
-          druhým kliknutím již vytváříte obchod a třetím sdílíte mezi další uživatele aplikace. Detailní report na
-          Vás pak čeká sám. Vše je navzájem propojeno. Ty nejlepší řešení totiž bývají ty nejjednodušší.
-        </div>
-      </div>
-    </section>
-    <section class="progress">
-      <div class="container">
-        <div class="progress__col">
-          <div class="progress__pic"><img src="assets/frontend/img/automatizace.png" alt="automatizace" width="155px" height="153px"></div>
-          <div class="progress__order">1</div>
-          <h3 class="progress__title">Automatizace</h3>
-          <div class="progress__text">
-            Nedělejte nic, co za Vás může udělat stroj.
-            Naše automatizace na mnoha úrovních v
-            celém Bizziapp Vás zbaví zdlouhavých,
-            mechanických úloh. Zbyde Vám tak čas
-            na to, na čem v byznysu opravdu záleží.
-          </div>
-        </div>
-        <div class="progress__col">
-          <div class="progress__pic"><img src="assets/frontend/img/customizace.png" alt="customizace" width="155px" height="153px"></div>
-          <div class="progress__order">2</div>
-          <h3 class="progress__title">Customizace</h3>
-          <div class="progress__text">
-            Chápeme, že každá společnost je jiná.
-            Proto připravujeme naše CRM systémy
-            vždy přesně na míru a skutečně jen pro
-            Vás. Díky přizpůsobení individuálním
-            podmínkám, požadavkům i vytyčeným
-            cílům je Bizziapp neocenitelným
-            pracovním nástrojem.
-          </div>
-        </div>
-        <div class="progress__col">
-          <div class="progress__pic"><img src="assets/frontend/img/reporting.png" alt="reporting" width="155px" height="153px"></div>
-          <div class="progress__order progress__order--last">3</div>
-          <h3 class="progress__title">Reporting</h3>
-          <div class="progress__text">
-            Nemarněte čas tam, kde není hodnota.
-            Díky analýze efektivity a následnému
-            reportu pracujete s daty, která pro Vás
-            mají význam. Biziapp to dokáže, protože
-            je přesně přizpůsoben tomu, co je pro Vás
-            důležité.
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="contact">
-      <div style="background-image: url('assets/frontend/img/contact-cover.png');" class="container">
-        <h2 class="contact__title">Buďme efektivní, buďme výkonní, buďme bizzi.</h2>
-        <div class="contact__form">
-          <input type="text" placeholder="Jméno a příjmení" class="contact__input">
-          <input type="email" placeholder="tomas.stanislavsky@liffstudj" class="contact__input">
-        </div>
-        <button type="submit" value="submit" class="contact__button">Chci vědět více</button>
-        <div class="contact__contact-us">Nebo kontaktujte zde:</div><a href="mailto:bizziapp@temify.com" class="contact__email">bizziapp@temify.com</a><img src="assets/frontend/img/person.png" alt="person" width="449px" height="469px" class="contact__picture">
-      </div>
-    </section>
     <footer class="footer">
       <div class="container">
         <div class="footer__col footer__col--no-padding">
@@ -205,7 +51,7 @@
         </div>
       </div>
     </footer>
-    <script src="assets/frontend/js/app.js"></script>
     <script src="assets/frontend/js/scrollreveal.min.js"></script>
+    <script src="assets/frontend/js/app.js"></script>
   </body>
 </html>
