Corrections and changes

--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,16 @@
         </div>
         <div class="header__wrap">
           <div class="header__logo"><img src="assets/frontend/img/logo.png" alt="logo" width="113px" height="28px"></div>
-          <div class="header__login-wrap"><a href="#" class="header__product-link">produkt</a>
+          <div class="header__login-wrap"><a href="product.html" class="header__product-link">produkt</a>
             <button class="header__login">přihlásit</button>
           </div>
         </div>
-        <h1 class="header__title">Dokonalé zázemí pro obchodníky</h1>
-        <div class="header__description">Firemní nástroj pro sledování týmové práce a budování vztahů s vašimi klienty.</div>
-        <input placeholder="E-mail" type="email" class="header__email">
-        <button type="submit" value="submit" class="header__send">Odeslat</button>
+        <div class="text-block">
+          <h1 class="header__title">Dokonalé zázemí pro obchodníky</h1>
+          <div class="header__description">Firemní nástroj pro sledování týmové práce a budování vztahů s vašimi klienty.</div>
+          <input placeholder="E-mail" type="email" class="header__email">
+          <button type="submit" value="submit" class="header__send">Odeslat</button>
+        </div>
       </div>
     </header>
     <footer class="footer">
