--- a/public/index.html
+++ b/public/index.html
@@ -19,37 +19,48 @@
     <meta property="og:type" content="website">
   </head>
   <body>
-    <header class="header">
-      <div style="background-image: url('assets/frontend/img/header-bg.png');" class="container">
-        <div class="header__lang-wrap"><a href="#" class="header__lang">cz</a>
-          <div class="header__line"></div><a href="#" class="header__lang active">EN</a>
-        </div>
-        <div class="header__wrap">
-          <div class="header__logo"><img src="assets/frontend/img/logo.png" alt="logo" width="113px" height="28px"></div>
-          <div class="header__login-wrap"><a href="product.html" class="header__product-link">produkt</a>
-            <button class="header__login">přihlásit</button>
+    <header style="background-image: url('assets/frontend/img/header-bg.png');" class="header">
+      <div class="container">
+        <div class="col-xs-12">
+          <div class="header__lang-wrap"><a href="#" class="header__lang">cz</a>
+            <div class="header__line"></div><a href="#" class="header__lang active">EN</a>
+          </div>
+          <div class="header__wrap">
+            <div class="header__logo"><img src="assets/frontend/img/logo.png" alt="logo" width="113px" height="28px"></div>
+            <div class="header__login-wrap"><a href="product.html" class="header__product-link">produkt</a>
+              <button class="header__login">
+                přihlásit
+                
+              </button>
+            </div>
           </div>
         </div>
-        <div class="text-block">
-          <h1 class="header__title">Dokonalé zázemí pro obchodníky</h1>
-          <div class="header__description">Firemní nástroj pro sledování týmové práce a budování vztahů s vašimi klienty.</div>
-          <input placeholder="E-mail" type="email" class="header__email">
-          <button type="submit" value="submit" class="header__send">Odeslat</button>
+        <div class="col-xs-12 col-md-7">
+          <div class="text-block">
+            <h1 class="header__title">Dokonalé zázemí pro obchodníky</h1>
+            <div class="header__description">Firemní nástroj pro sledování týmové práce a budování vztahů s vašimi klienty.</div>
+            <div class="header__subscription">
+              <input placeholder="E-mail" type="email" class="header__email">
+              <button type="submit" value="submit" class="header__send">Odeslat</button>
+            </div>
+          </div>
         </div>
       </div>
     </header>
     <footer class="footer">
       <div class="container">
-        <div class="footer__col footer__col--no-padding">
-          <div class="footer__logo"><img src="assets/frontend/img/logo.png" alt="logo" width="113px" height="28px"></div><a href="#" class="footer__link">Terms and Conditions</a>
-        </div>
-        <div class="footer__col"><a href="mailto:bizziapp@temify.com" class="footer__link">E-mail: bizziapp@temify.com<br></a><a href="tel:+420232232262" class="footer__link">Tel.: +420 232 232 262</a></div>
-        <div class="footer__col">
-          <address class="footer__address">
-            Temify consulting, s.r.o.<br>
-            Kolbenova 882/5a<br>
-            190 00 Prague
-          </address>
+        <div class="row">
+          <div class="footer__col col-xs-12 col-sm-4 col-md-3">
+            <div class="footer__logo"><img src="assets/frontend/img/logo.png" alt="logo" width="113px" height="28px"></div><a href="#" class="footer__link">Terms and Conditions</a>
+          </div>
+          <div class="footer__col col-xs-12 col-sm-4 col-md-3"><a href="mailto:bizziapp@temify.com" class="footer__link">E-mail: bizziapp@temify.com<br></a><a href="tel:+420232232262" class="footer__link">Tel.: +420 232 232 262</a></div>
+          <div class="footer__col col-xs-12 col-sm-4 col-md-3">
+            <address class="footer__address">
+              Temify consulting, s.r.o.<br>
+              Kolbenova 882/5a<br>
+              190 00 Prague
+            </address>
+          </div>
         </div>
       </div>
     </footer>
