--- a/public/product.html
+++ b/public/product.html
@@ -183,16 +183,18 @@
     </section>
     <footer class="footer">
       <div class="container">
-        <div class="footer__col footer__col--no-padding">
-          <div class="footer__logo"><img src="assets/frontend/img/logo.png" alt="logo" width="113px" height="28px"></div><a href="#" class="footer__link">Terms and Conditions</a>
-        </div>
-        <div class="footer__col"><a href="mailto:bizziapp@temify.com" class="footer__link">E-mail: bizziapp@temify.com<br></a><a href="tel:+420232232262" class="footer__link">Tel.: +420 232 232 262</a></div>
-        <div class="footer__col">
-          <address class="footer__address">
-            Temify consulting, s.r.o.<br>
-            Kolbenova 882/5a<br>
-            190 00 Prague
-          </address>
+        <div class="row">
+          <div class="footer__col col-xs-12 col-sm-4 col-md-3">
+            <div class="footer__logo"><img src="assets/frontend/img/logo.png" alt="logo" width="113px" height="28px"></div><a href="#" class="footer__link">Terms and Conditions</a>
+          </div>
+          <div class="footer__col col-xs-12 col-sm-4 col-md-3"><a href="mailto:bizziapp@temify.com" class="footer__link">E-mail: bizziapp@temify.com<br></a><a href="tel:+420232232262" class="footer__link">Tel.: +420 232 232 262</a></div>
+          <div class="footer__col col-xs-12 col-sm-4 col-md-3">
+            <address class="footer__address">
+              Temify consulting, s.r.o.<br>
+              Kolbenova 882/5a<br>
+              190 00 Prague
+            </address>
+          </div>
         </div>
       </div>
     </footer>
