--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta property="og:type" content="website">
   </head>
   <body>
-    <header style="background-image: url('assets/frontend/img/header-bg.png');" class="header">
+    <header style="background-image: url('assets/frontend/img/header-background.svg');" class="header">
       <div class="container">
         <div class="col-xs-12">
           <div class="header__lang-wrap"><a href="#" class="header__lang">cz</a>
