--- a/public/product.html
+++ b/public/product.html
@@ -19,8 +19,9 @@
     <meta property="og:type" content="website">
   </head>
   <body>
-    <header style="background-image: url('assets/frontend/img/header__product.png');" class="header--product">
-      <div class="container">
+    <header class="header--product">
+      <div class="container header--container-product"></div>
+      <div class="container header__text">
         <div class="col-xs-12">
           <div class="header__lang-wrap"><a href="#" class="header__lang">cz</a>
             <div class="header__line"></div><a href="#" class="header__lang active">EN</a>
@@ -39,7 +40,7 @@
           <div class="text-block">
             <h1 class="header__title fadeIn">Dokonalé zázemí pro obchodníky</h1>
           </div>
-          <div class="header__tablet fadeIn"><img src="assets/frontend/img/tablet.png" alt="tablet" width="100%" height="auto"></div>
+          <div class="header__tablet fadeIn"><img src="assets/frontend/img/tablet.png" alt="tablet" style="width: 100%; max-width: 497px; margin: 0 auto;"></div>
         </div>
       </div>
     </header>
