--- a/public/index.html
+++ b/public/index.html
@@ -26,13 +26,10 @@
             <div class="header__line"></div><a href="#" class="header__lang active">EN</a>
           </div>
           <div class="header__wrap">
-            <div class="header__logo"><img src="assets/frontend/img/logo.png" alt="logo" width="113px" height="28px"></div>
-            <div class="header__login-wrap"><a href="product.html" class="header__product-link">produkt</a>
-              <button class="header__login">
+            <div class="header__logo"><a href="/" title="bizZiapp home"><img src="assets/frontend/img/logo.png" alt="logo" width="113px" height="28px"></a></div>
+            <div class="header__login-wrap"><a href="/product" title="Product" class="header__product-link">produkt</a><a href="http://liff.bizziapp.com/" title="Log in" class="header__login">
                 přihlásit
-                
-              </button>
-            </div>
+                </a></div>
           </div>
         </div>
         <div class="col-xs-12 col-md-7">
