--- a/public/product.html
+++ b/public/product.html
@@ -27,13 +27,10 @@
             <div class="header__line"></div><a href="#" class="header__lang active">EN</a>
           </div>
           <div class="header__wrap">
-            <div class="header__logo"><img src="assets/frontend/img/logo.png" alt="logo" width="113px" height="28px"></div>
-            <div class="header__login-wrap"><a href="product.html" class="header__product-link">produkt</a>
-              <button class="header__login">
+            <div class="header__logo"><a href="/" title="bizZiapp home"><img src="assets/frontend/img/logo.png" alt="logo" width="113px" height="28px"></a></div>
+            <div class="header__login-wrap"><a href="/product" title="Product" class="header__product-link">produkt</a><a href="http://liff.bizziapp.com/" title="Log in" class="header__login">
                 přihlásit
-                
-              </button>
-            </div>
+                </a></div>
           </div>
         </div>
         <div class="col-xs-12">
@@ -184,9 +181,11 @@
       <div class="container">
         <h2 class="contact__title progressiveAnim">Buďme efektivní, buďme výkonní, buďme bizzi.</h2>
         <div class="contact__form progressiveAnim">
-          <input type="text" placeholder="Jméno a příjmení" class="contact__input">
-          <input type="email" placeholder="E-mailová adresa" class="contact__input">
-          <button type="submit" value="submit" class="contact__button">Chci vědět více</button>
+          <form action="DAVID_SEM_PLS">
+            <input type="text" placeholder="Jméno a příjmení" class="contact__input">
+            <input type="email" placeholder="E-mailová adresa" class="contact__input">
+            <button type="submit" value="submit" class="contact__button">Chci vědět více</button>
+          </form>
         </div>
         <div class="progressiveAnim align--center">
           <div class="contact__contact-us">Nebo kontaktujte zde:</div><a href="mailto:bizziapp@temify.com" class="contact__email">bizziapp@temify.com</a>
