Implemented mailchimp form

--- a/public/product.html
+++ b/public/product.html
@@ -181,9 +181,9 @@
       <div class="container">
         <h2 class="contact__title progressiveAnim">Buďme efektivní, buďme výkonní, buďme bizzi.</h2>
         <div class="contact__form progressiveAnim">
-          <form action="DAVID_SEM_PLS">
-            <input type="text" placeholder="Jméno a příjmení" class="contact__input">
-            <input type="email" placeholder="E-mailová adresa" class="contact__input">
+          <form action="https://bizziapp.us17.list-manage.com/subscribe/post?u=9e52db3f58c43c9ac069d2d38&amp;amp;id=ba8211c81f" target="_blank" method="POST" novalidate>
+            <input type="hidden" name="b_9e52db3f58c43c9ac069d2d38_ba8211c81f" tabindex="-1" value="" class="contact__input">
+            <input type="email" name="EMAIL" placeholder="E-mailová adresa" class="contact__input">
             <button type="submit" value="submit" class="contact__button">Chci vědět více</button>
           </form>
         </div>
